# trending-keyword-automation-by-llm

./: .gitignore  README.md  SKILL.md  pyproject.toml  run_from_raw.py  run_full_pipeline.py  run_llm_review_only.py  run_normalize_rank.py
config/: apify_actors_v1.json  google_scoring.json  instagram_scoring.json  ranking.json  social_listening_v1.json  threshold.json
data/mappings/: canonical_mapping.csv
docs/: step-1-3-review.md
docs/superpowers/plans/: 2026-06-22-social-listening-pipeline.md
examples/social_artifacts/2026-06-22/: run_manifest.json  seed_snapshot_2026-06-22.json  social_trending_2026_06_22.csv  unmatched_review_queue_2026_06_22.csv
examples/social_artifacts/2026-06-22/google_trends/: raw.json
schemas/: weekly_fnb_trending_v1.schema.json
scripts/: apify_fetch.sh  apify_fetch_threads.sh  assemble_output.py  backfill_descriptions.py  exact_match.py  filter_threshold.py  luxury_extract.py  normalize_raw.py  present.py  rank.py  review.py  run_fetch.sh  run_fetch_only.sh  trend_comparison.py
skills/: SKILL.md
skills/01-fetch/: SKILL.md
skills/02a-extract-keywords/: SKILL.md
skills/02b-filter-fnb/: SKILL.md
skills/03-normalize/: SKILL.md
skills/04-review/: SKILL.md  review-prompt.md
skills/05-ranking/: SKILL.md
skills/06-present/: SKILL.md
src/social_pipeline/: apify.py  cli.py  config.py  fnb_filter.py  llm_review.py  normalize.py  pipeline.py  ranking.py
tests/: test_apify.py  test_cli.py  test_config.py  test_llm_review.py  test_normalize.py  test_pipeline.py  test_ranking.py
(+1 files in other folders)
