[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "social-listening-pipeline"
version = "0.1.0"
description = "Weekly Hong Kong F&B social listening pipeline"
requires-python = ">=3.12"
dependencies = ["httpx>=0.27", "apify-client>=3.0"]

[project.optional-dependencies]
dev = ["pytest>=9.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
